--- a/src/pages/coaching.astro
+++ b/src/pages/coaching.astro
@@ -216,7 +216,7 @@ const videoTestimonials = [
   <section class="py-12 sm:py-16 md:py-20 bg-white">
     <div class="w-full px-4 sm:px-8 md:px-12 lg:px-16">
       <div class="grid lg:grid-cols-2 gap-8 sm:gap-12 lg:gap-16 items-center">
-        <div class="flex flex-col items-center lg:items-start order-2 lg:order-1">
+        <div class="flex flex-col items-center order-2 lg:order-1">
           <div class="mb-6 sm:mb-8">
             <img
               src="/images/coaching-page/the-system-how-companies-get-their-shit-together.jpg"
