--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ const currentPath = Astro.url.pathname;
 const navItems = [
   { label: 'STAFFING', href: '/staffing' },
   { label: 'COACHING', href: '/coaching' },
-  { label: 'RESOURCES', href: '/blog' }
+  { label: 'RESOURCES', href: '/free-resources' }
 ];
 ---
 
