--- a/src/pages/free-resources/index.astro
+++ b/src/pages/free-resources/index.astro
@@ -114,7 +114,7 @@ const contentTypes = [
               <div id="blog-grid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
                 {posts.map((post) => (
                   <div class="blog-item h-full" data-tags={JSON.stringify(post.data.tags || [])} data-title={(post.data.title || '').toLowerCase()} data-description={(post.data.description || '').toLowerCase()}>
-                    <a href={`/free-resources/${post.slug}/`} class="block group h-full">
+                    <a href={post.slug === 'the-system-ebook' ? '/free-resources/how-companies-get-their-sht-together/' : `/free-resources/${post.slug}/`} class="block group h-full">
                       <article class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 h-full flex flex-col">
                         <div class="overflow-hidden bg-gray-100 relative" style="height: 225px;">
                           {post.data.image && (
