--- a/src/pages/free-resources/how-companies-get-their-sht-together.astro
+++ b/src/pages/free-resources/how-companies-get-their-sht-together.astro
@@ -71,8 +71,8 @@ const pageDescription = "You'd love to let go of the day-to-day operation… But
             <div class="sticky top-24">
               <div class="bg-gray-50 rounded-2xl p-6 mb-8">
                 <img
-                  src="https://images.pexels.com/photos/3184360/pexels-photo-3184360.jpeg?auto=compress&cs=tinysrgb&w=400"
-                  alt="Business Professional"
+                  src="/images/resources-page/The Best VA Services For Your Business.webp"
+                  alt="The Best VA Services For Your Business"
                   class="w-full rounded-lg mb-4"
                 />
               </div>
