--- a/src/pages/audit-company-five-minutes.astro
+++ b/src/pages/audit-company-five-minutes.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro';
 
 const pageTitle = "How To Audit Your Entire Company In Five Minutes To See What's Working And What's Not";
 const pageDescription = "Get everyone in your company on the same page… 1 language, 1 set of tools, 1 set of disciplines.";
@@ -60,7 +60,7 @@ const pageDescription = "Get everyone in your company on the same page… 1 lang
               </div>
 
               <div class="space-y-4">
-                <a href="/free-resources#" class="block group">
+                <a href="/best-va-services/" class="block group">
                   <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-lg transition-all duration-300">
                     <div class="flex gap-4">
                       <img
@@ -77,7 +77,7 @@ const pageDescription = "Get everyone in your company on the same page… 1 lang
                   </div>
                 </a>
 
-                <a href="/free-resources/how-companies-get-their-sht-together/" class="block group">
+                <a href="/how-companies-get-their-sht-together/" class="block group">
                   <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-lg transition-all duration-300">
                     <div class="flex gap-4">
                       <img
@@ -94,7 +94,7 @@ const pageDescription = "Get everyone in your company on the same page… 1 lang
                   </div>
                 </a>
 
-                <a href="/free-resources/audit-company-five-minutes/" class="block group">
+                <a href="/audit-company-five-minutes/" class="block group">
                   <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-lg transition-all duration-300">
                     <div class="flex gap-4">
                       <img
